title image needs work, will discuss

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="item"><h1>Monte Montgomery, the GOAT of acoustic guitar</h1></div>
     </div>
     <div class="container">
-  <div class="img-item"><img id="title-image" src="monte3.png" alt="hi" class="inline"/></div>
+  <div><img id="title-image" src="monte3.png" alt="hi" class="inline"/></div>
     </div>
 
     <div class="container">
